# gabrielBusta.github.io

./: pelicanconf.py  publishconf.py  pyproject.toml
content/: welcome-to-the-world-of-release-engineering.md
docs/: archives.html  authors.html  index.html  tags.html  welcome-to-the-world-of-release-engineering.html
docs/author/: gabriel-bustamante.html
docs/category/: firefox.html
docs/feeds/: all.atom.xml  firefox.atom.xml
docs/tag/: engineering.html  firefox.html  open-source.html  release.html
output/: categories.html  tags.html  welcome-to-the-world-of-release-engineering.html
output/author/: gabriel-bustamante.html
output/tag/: firefox.html  release.html
